# Erys

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test.er
cmake/modules/: QuarkTargets.cmake
compiler/errors/: Cargo.toml
compiler/errors/src/: lib.rs
compiler/erysc/: Cargo.toml
compiler/erysc/src/: main.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs  tokens.rs
compiler/session/: Cargo.toml
compiler/session/src/: lib.rs  stream.rs
compiler/span/: Cargo.toml
compiler/span/src/: lib.rs
include/: Config.hpp  Config.hpp.in
include/Basic/: Session.hpp  Span.hpp
include/Parse/Lexer/: Lexer.hpp  Tokens.hpp
lib/: CMakeLists.txt  Erys.cpp
lib/Parse/: CMakeLists.txt  Lexer.cpp
